fixed grid expanding to be too large. Also got rid of random dice placement for now
would have to store the dice location for it not to move around on every
rerender

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -25,6 +25,8 @@
 
 .board {
   flex: 1;
+  width: max-content;
+  margin: 0 auto;
   aspect-ratio: 2 / 1;
   max-width: 100vw;
   max-height: 70vh;
